# hacs-intentsity

./: .gitignore  .prettierignore  AGENTS.md  DEPENDENCIES.md  LICENSE  README.md  configuration.yaml  hacs.json  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  rollup.config.mjs
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/agents/: home-assistant-component-expert.agent.md
.github/instructions/: api.instructions.md  config_flow.instructions.md  configuration_yaml.instructions.md  diagnostics.instructions.md  entities.instructions.md  manifest.instructions.md  python.instructions.md  services_yaml.instructions.md  tests.instructions.md  translations.instructions.md
.github/prompts/: Add Action.prompt.md  Add Entity Platform.prompt.md  Add Entity to Device.prompt.md  Add New Sensor.prompt.md  Create ADR.prompt.md  Create Implementation Plan.prompt.md  Debug Coordinator Issue.prompt.md  Review Integration.prompt.md  Update Translations.prompt.md
.github/workflows/: release.yaml  validate.yaml  version.yaml
config/: configuration.yaml
config_flow_handler/: __init__.py  config_flow.py  subentry_flow.py  validators.py
config_flow_handler/schemas/: __init__.py
config_flow_handler/validators/: __init__.py
custom_components/: __init__.py
custom_components/intentsity/: __init__.py  config_flow.py  const.py  coordinator.py  data.py  db.py  diagnostics.py  manifest.json  models.py  panel.html  panel.js  repairs.py  sensor.py  view.py  (+3 more)
script/: develop  hassfest  lint  test
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_db_reviews.py  test_init.py  test_models.py  test_runtime.py  test_runtime_helpers.py  test_sensor.py  test_utils.py  test_websocket.py  test_websocket_helpers.py
(+69 files in other folders)
