[project]
name = "hacs-intentsity"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant==2026.1.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.0",
    "voluptuous>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
