[project]
name = "hacs-intentsity"
version = "0.6.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ha-ffmpeg",
    "hassil>=3.5.0",
    "home-assistant-intents>=2026.1.6",
    "homeassistant==2026.1.3",
    "mutagen>=1.47.0",
    "numpy>=2.2.2",
    "orjson>=3.11.3",
    "pydantic>=2.12.5",
    "pymicro-vad>=2.0.1",
    "pyspeex-noise==1.0.2",
    "sqlalchemy>=2.0.0",
    "voluptuous>=0.13.1",
]

[project.optional-dependencies]
all = [
    "homeassistant==2026.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.uv.sources]
ha-ffmpeg = { git = "https://github.com/home-assistant-libs/ha-ffmpeg" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.14.13",
]
